...
                            android:gravity="center"
                            android:orientation="horizontal"

                            android:radius="10dp"
                            >
                            <EditText
                                android:id="@+id/search_bar"
                                android:layout_width="200dp"
                                android:layout_height="44dp"
                                android:layout_weight="0"
                                android:layout_marginStart="20dp"
                                android:ems="10"
                                android:inputType="text"
                                android:autofillHints="Search query"
                                tools:ignore="LabelFor"
                                android:hint="Search for courses"
                                android:background="@null"/>

                            <ImageButton
                                android:id="@+id/search_button"
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:layout_weight="0"
                                android:padding= "9dp"
                                android:layout_marginEnd="10dp"
                                android:background="@drawable/circular_button_bg"
...
