<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Activities.LandingPageActivity">

    <LinearLayout
        android:id="@+id/user_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
        android:gravity="center">

        <TextView
            android:id="@+id/username_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="UserName"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="40sp"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"/>
        <Button
            android:id="@+id/logout_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Log Out"/>
        <TextView
            android:id="@+id/enrolled_faculty_label"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Enrolled Faculty/School"
            />


        <!-- Spinner for selecting enrolled faculty/school -->
        <Spinner
            android:id="@+id/faculty_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:entries="@array/faculty_list" />



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

        <TextView
            android:id="@+id/toggle_daynight_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toggle_button"
            android:layout_centerHorizontal="true"
            android:text="Switch to night mode"/>

        <ToggleButton
            android:id="@+id/toggle_daynight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="Day"
            android:textOn="Night"
            android:checked="false"
            android:layout_marginTop="16dp"/>

        </LinearLayout>

        <Button
            android:id="@+id/reviews_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/read_your_reviews"
            />


    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="bottom"
        >

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/bottomBar_fragment_container_view"
            tools:layout="@layout/fragment_navigation_bar"
            android:layout_gravity="bottom"
            app:layout_anchorGravity="bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </com.google.android.material.bottomnavigation.BottomNavigationView>





</LinearLayout>
