...
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/home_icon"
                android:layout_marginStart="124dp"
                android:layout_marginEnd="100dp"
                />
            <ImageButton
                android:id="@+id/userButton"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:background="@null"
                android:contentDescription="@string/login_and_account"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/user_icon_svg_test"
...
