...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
        android:gravity="center">
        <EditText
            android:id="@+id/userName_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:hint="Enter your username"
            android:inputType="text"/>

        <EditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:hint="Enter your password"
            android:inputType="textPassword"/>

        <EditText
            android:id="@+id/password_verify_input"
            android:layout_width="match_parent"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:layout_height="wrap_content"
            android:hint="Verify your password"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/signup_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sign Up"/>

        <TextView
            android:layout_width="wrap_content"
...
